@@ -10,6 +10,8 @@ What's New in Python 3.3.0 Beta 1?
 Library
 -------
 
+- Issue #14969: Better handling of exception chaining in contextlib.ExitStack
+
 - Issue #14962: Update text coloring in IDLE shell window after changing
   options.  Patch by Roger Serwy.
 
